# haskell

./: Crypto-3.0.3.patch  HSQL-1.7.patch  cgi-2006.8.5.patch  data.txt  fastcgi-2006.10.9.patch  haskell.txt  hdbc-odbc-1.0.1.0.patch  odbc.ini  odbcinst.ini  test.hs  xhtml-2006.7.5.patch  xhtml-2006.9.13.patch
adjunction/: adjunction.hs  pair-function.hs  uncurry.hs
alarm/: Alarm.hs  alarm.c
array/: array.hs
backwards/: backwards.hs
catchio/: base.hs  maybe.hs  state.hs
cgi/: cgi.hs  cgi1.hs  cgi2.hs  cgi3.hs  cgi4.hs  fcgi.hs
combination/: i.hs
concurrent/: chan.hs  mvar.hs  stm.hs
config/: Test1.hs  Test2.hs  Test3.hs  Test4.hs  Test5.hs  Test6.hs  Test7.hs  Test8.hs
cont/: cont.hs  cont.txt
cont2/: cont.hs
csv/: csv.hs
curl/: curl.hs
date/: date.hs
db/: test.hs  test.sql  test2.hs
endo/: applicative.hs  endo.hs  endofunctor.hs  monad.hs  nt.hs
ends/: Functor.hs  Hom.hs  Main.hs  ends.cabal
error/: error.hs  error.txt  error1.hs  error2.hs
euler/: 1.hs  10.hs  102.hs  104.hs  11.hs  112.hs  12.hs  120.hs  124.hs  13.hs  14.hs  145.hs  15.hs  16.hs  17.hs  18.hs  19.hs  2.hs  20.hs  206.hs  21.hs  22.hs  23.hs  24.hs  25.hs  26.hs  27.hs  28.hs  29.hs  3.hs  30.hs  31.hs  32.hs  33.hs  34.hs  35.hs  36.hs  37.hs  38.hs  39.hs  (+37 more)
ex_po/: ex_po.hs  po.hs
exception/: catchio.hs
exists_const_forall/: Any.hs  AnyC.hs  AnyF.hs  AnyFA.hs  AnySV.hs  Exists.hs  Forall.hs  Some.hs  SomeC.hs  SomeF.hs  SomeFA.hs  SomeFA2.hs  SomeSV.hs  Triple.hs  exists_const_forall.cabal
expr/: Add.hs  Array.hs  Base.hs  Main.hs  Stringify.hs
f_algebra/: CofreeMonoid.hs  FreeMonoid.hs  Monoid.hs  MonoidCoalgebra.hs  f_algebra.cabal
fields/: Extensible.hs  Field.hs  GenericLens.hs  Lens.hs  Record.hs  RecordDot.hs  Vinyl.hs  field.cabal  field.hs  generic-lens.hs  lens.hs  record-dot.hs  record.hs
final/: Eval.hs  Expr.hs  Format.hs  Function.hs  Util.hs  final.cabal
fixpoint/: Church.hs  ChurchFunctor.hs  ChurchMu.hs  Fix.hs  FixNat.hs  GenericMaybe.hs  Maybe.hs  Mu.hs  MuNat.hs  Nu.hs  NuNat.hs  fixpoint.cabal
free/: iofree.hs  iomonad.hs
gadt/: gadt.hs
gadt_kind/: Main.hs  gadt_kind.cabal
generics/: g.hs  g2.hs  g3.hs  generics.hs  generics2.hs  generics3.hs  ig.hs  ig2.hs  ig3.hs
hdbc/: hdbc.hs
hlistmap/: Functor1.hs  HList.hs  Literal.hs  Map1.hs  Map10.hs  Map2.hs  Map3.hs  Map4.hs  Map5.hs  Map6.hs  Map7.hs  Map8.hs  Map9.hs  MapClass1.hs  MapClass2.hs  MapClass3.hs  MapItemClass1.hs  MapItemClass2.hs  MapItemClass3.hs  MapItemClass4.hs  Object.hs  Objects.hs  Witness1.hs  Witness2.hs  Witness3.hs  Witness4.hs  Witness5.hs  Witness6.hs  Witness7.hs  Witness8.hs  hlistmap.cabal
hsql/: hsql.hs
hxt/: HXT.hs  readwrite.hs  state.hs
impredicative/: impredicative.hs  newtype.hs
instance/: instance.hs
knowntype/: knowntype.hs
length/: length.hs
lens/: simple.hs  traversal.hs
lens2/: Profunctor.hs  Sample.hs  Store.hs  VanLaarhoven.hs  lens2.cabal
limits/: Product.hs  limits.cabal
lone/: distributive.hs  lone.hs
loop/: Loop.hs
mdo/: mdo.hs
monad-control/: control.hs  func.hs  maybe.hs  state.hs
monoid/: ord.hs
monoid-homomorphism/: type.hs  typeclass1.hs  typeclass2.hs  typeclass3.hs  typeclass4.hs
monoidal/: coproduct.hs  product.hs  productToCoproduct.hs
monoidal2/: Compose.hs  Coproduct.hs  Day.hs  Functor.hs  FunctorCompose.hs  FunctorDay.hs  FunctorMonoid.hs  FunctorProduct.hs  Monoid.hs  NaturalTransformation.hs  Product.hs  monoidal2.cabal  monoidal2.hs
monoidal2/hybrid/: Coproduct.hs  FunctorCompose.hs  FunctorDay.hs  FunctorMonoid.hs  FunctorProduct.hs  Monoid.hs  NaturalTransformation.hs  Product.hs  monoidal2.cabal
monoidal2/mpc/: Coproduct.hs  FunctorCompose.hs  FunctorDay.hs  FunctorMonoid.hs  FunctorProduct.hs  Monoid.hs  Product.hs  monoidal2.cabal  monoidal2.hs
monoidal2/std/: Coproduct.hs  Functor.hs  Functor2.hs  FunctorCompose.hs  FunctorDay.hs  FunctorMonoid.hs  FunctorProduct.hs  Monoid.hs  MonoidalFunctor.hs  NaturalTransformation.hs  Product.hs  monoidal2.cabal  monoidal2.hs
monoidal2/tf/: Coproduct.hs  Functor2.hs  FunctorCompose.hs  FunctorDay.hs  FunctorMonoid.hs  FunctorProduct.hs  Monoid.hs  Product.hs  monoidal2.cabal
multitype/: multitype.hs  param.hs  param_dynamic.hs  param_static.hs  return.hs
myshow/: myshow.hs
nakagawa/: column.hs  graph.hs  permutation.hs  words.txt
natural-transformation/: natural-transformation.hs
on/: on.hs
opengl/: matrix.hs  opengl1.hs  opengl10.hs  opengl11.hs  opengl12.hs  opengl13.hs  opengl14.hs  opengl15.hs  opengl16.hs  opengl17.hs  opengl18.hs  opengl19.hs  opengl2.hs  opengl20.fsh  opengl20.hs  opengl20.vsh  opengl21.fsh  opengl21.hs  opengl21.vsh  opengl22.fsh  opengl22.hs  opengl22.vsh  opengl3.hs  opengl4.hs  opengl5.hs  opengl6.hs  opengl7.hs  opengl8.hs  opengl9.hs  texture.rgb  util.hs
optic-type/: getter.hs  iso.hs  lens.hs  optic-type.cabal  optic.hs  prism.hs  setter.hs  traversal.hs
pair_function/: Curry.hs  Env.hs  Reader.hs  State.hs  Store.hs  Traced.hs  Writer.hs  pair_function.cabal
pipes/: compose.hs  gather1.hs  gather2.hs  gather3.hs  gather4.hs  gather5.hs  gather6.hs  hash.hs  sum1.hs  sum2.hs  sum3.hs  sum4.hs  sum5.hs
rank2/: rank2.hs
reflection/: Reflection1.hs  Reflection10.hs  Reflection2.hs  Reflection3.hs  Reflection4.hs  Reflection5.hs  Reflection6.hs  Reflection7.hs  Reflection8.hs  Reflection9.hs  reflection.cabal
regex/: applicative.hs  regex.hs  regex.txt  (+4 more)
regex2/: Regex1.hs  Regex10.hs  Regex11.hs  Regex12.hs  Regex13.hs  Regex14.hs  Regex15.hs  Regex16.hs  Regex2.hs  Regex3.hs  Regex4.hs  Regex5.hs  Regex6.hs  Regex7.hs  Regex8.hs  Regex9.hs  regex2.cabal
serialize-free/: Free.hs  Free1.hs  Free2.hs  Free3.hs  Free4.hs  serialize-free.cabal
strength/: strength.cabal
strength/Functor/: Closed.hs  CoproductStrong.hs  NaturalTransformation.hs  ProductStrong.hs
strength/Profunctor/: Closed.hs  Const.hs  CoproductStrong.hs  Costar.hs  DinaturalTransformation.hs  NaturalTransformation.hs  ProductStrong.hs  Pure.hs  Star.hs
yoneda/: Item.hs  Main.hs  NList.hs  SList.hs  yoneda.cabal
(+224 files in other folders)
