cabal-version:      3.0
name:               field
version:            0.1.0.0

common warnings
    ghc-options: -Wall

executable field
    import:           warnings
    main-is:          Main.hs
    build-depends:    base ^>=4.19.1.0,
                      extensible,
                      generic-lens,
                      lens
    default-language: GHC2021
    other-modules:    Extensible
                      Field
                      GenericLens
                      Lens
                      Record
                      RecordDot
