cabal-version:      3.0
name:               fixpoint
version:            0.1.0.0
license:            MIT
license-file:       LICENSE
author:             Satoshi Nakamura
maintainer:         snak@snak.org
category:           Data
build-type:         Simple

common warnings
    ghc-options: -Wall

executable fixpoint
    main-is:          Main.hs
    other-modules:    Fix
                      FixNat
                      GenericMaybe
                      Maybe
                      Mu
                      MuNat
                      Nu
                      NuNat
    build-depends:    base
    default-language: GHC2024
    default-extensions: Strict, TypeAbstractions
    ghc-options: -Wall -Wno-x-partial
