cabal-version:      3.0
name:               gadt-kind
version:            0.1.0.0
license:            MIT
license-file:       LICENSE
author:             Satoshi Nakamura
maintainer:         snak@snak.org
category:           Data
build-type:         Simple

common warnings
    ghc-options: -Wall

executable reflection
    import:           warnings
    main-is:          Main.hs
    build-depends:    base >=4.19.1.0
    default-language: GHC2021
    default-extensions: GADTs
                        TypeData
