cabal-version:      3.0
name:               hlistmap
version:            0.1.0.0
license:            MIT
license-file:       LICENSE
author:             Satoshi Nakamura
maintainer:         snak@snak.org
category:           Data
build-type:         Simple

common warnings
    ghc-options: -Wall

executable hlistmap
    import:           warnings
    main-is:          Main.hs
    other-modules:    Functor1
                      HList
                      Literal
                      MapClass1
                      MapClass2
                      MapClass3
                      MapItemClass1
                      MapItemClass2
                      MapItemClass3
                      Object
                      Objects
                      Witness1
                      Witness2
                      Witness3
                      Witness4
                      Witness5
    build-depends:    base >=4.19.1.0
    default-language: GHC2021
    default-extensions: DataKinds
                        GADTs
                        LambdaCase
                        MultiParamTypeClasses
                        RequiredTypeArguments
                        TypeAbstractions
                        TypeApplications
                        TypeData
                        TypeFamilies
                        UndecidableInstances
