cabal-version:      3.0
name:               lens2
version:            0.1.0.0
license:            MIT
license-file:       LICENSE
author:             Satoshi Nakamura
maintainer:         snak@snak.org
category:           Data
build-type:         Simple

common warnings
    ghc-options: -Wall -Wno-name-shadowing

executable lens2
    import:           warnings
    main-is:          Main.hs
    other-modules:    Profunctor
                      Sample
                      Store
                      VanLaarhoven
    build-depends:    base >=4.19.1.0,
                      comonad,
                      profunctors
    default-language: GHC2021
    default-extensions:
