cabal-version:      3.0
name:               limits
version:            0.1.0.0
license:            MIT
license-file:       LICENSE
author:             Satoshi Nakamura
maintainer:         snak@snak.org
category:           Data
build-type:         Simple

common warnings
    ghc-options: -Wall

executable limits
    import:           warnings
    main-is:          Main.hs
    other-modules:    Product
    build-depends:    base >=4.19.1.0,
    default-language: GHC2021
    default-extensions: AllowAmbiguousTypes,
                        DataKinds,
                        FunctionalDependencies,
                        TypeData,
                        TypeFamilies
