cabal-version:      3.0
name:               optic-type
version:            0.1.0.0
build-type:         Simple

common warnings
    ghc-options: -Wall -Wno-name-shadowing

executable optic-type
    import:           warnings
    main-is:          optic.hs
    build-depends:    base ^>=4.17.1.0,
                      distributive,
                      mtl,
                      profunctors,
                      tagged
    default-language: GHC2021
