cabal-version:      3.0
name:               refl
version:            0.1.0.0
license:            MIT
license-file:       LICENSE
author:             Satoshi Nakamura
maintainer:         snak@snak.org
category:           Data
build-type:         Simple

common warnings
    ghc-options: -Wall

executable reflection
    import:           warnings
    main-is:          Main.hs
    other-modules:    Reflection1
                      Reflection2
    build-depends:    base >=4.19.1.0,
                      reflection
    default-language: GHC2021
    default-extensions: FunctionalDependencies,
                        RankNTypes,
                        RecordWildCards,
                        TypeFamilies
