cabal-version:      3.0
name:               regex2
version:            0.1.0.0
license:            MIT
license-file:       LICENSE
author:             Satoshi Nakamura
maintainer:         snak@snak.org
category:           Data
build-type:         Simple

common warnings
    ghc-options: -Wall

executable regex2
    import:           warnings
    main-is:          Main.hs
    other-modules:    Regex1
                      Regex2
                      Regex3
                      Regex4
                      Regex5
                      Regex6
                      Regex7
                      Regex8
                      Regex9
                      Regex10
                      Regex11
    build-depends:    base ^>=4.19.1.0,
                      mtl
    default-language: GHC2021
    default-extensions: LambdaCase
