cabal-version:      3.0
name:               serialize-free
version:            0.1.0.0
license:            MIT
license-file:       LICENSE
author:             Satoshi Nakamura
maintainer:         snak@snak.org
category:           Data
build-type:         Simple

common warnings
    ghc-options: -Wall

executable serialize-free
    main-is:          Main.hs
    other-modules:    Free
                      Free1
                      Free2
                      Free3
    build-depends:    base,
                      kan-extensions
    default-language: GHC2024
    default-extensions: UndecidableInstances
