cabal-version:      3.0
name:               strength
version:            0.1.0.0
license:            MIT
license-file:       LICENSE
author:             Satoshi Nakamura
maintainer:         snak@snak.org
category:           Data
build-type:         Simple

common warnings
    ghc-options: -Wall

executable pair_function
    import:           warnings
    main-is:          Main.hs
    other-modules:    Functor.Closed
                      Functor.CoproductStrong
                      Functor.ProductStrong
    build-depends:    base >=4.19.1.0,
                      distributive
    default-language: GHC2021
    default-extensions: UndecidableInstances

