cabal-version:      3.4
name:               yoneda
version:            0.1.0.0
build-type:         Simple

common warnings
    ghc-options: -Wall

executable yoneda
    import:           warnings
    main-is:          Main.hs
    build-depends:    base ^>=4.19.1.0,
                      kan-extensions
    default-language: GHC2021
    other-modules:    SList
